# learn-opengl

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp
include/: camera.hpp  shader.hpp
include/glad/: glad.h
lib/: libglfw.so.3.4
shaders/: fragment.shader  vertex.shader
